changed i to iteration

--- a/Augmentation.ipynb
+++ b/Augmentation.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "- Replace the value of the vairable   \"bucketname\" below to the name of the bucket you have created\n",
     "\n",
-    "- You can also change the value of \"i\" below to change the number of augmented images to be generated.\n",
+    "- You can also change the value of \"iteration\" below to change the number of augmented images to be generated.\n",
     "\n",
     "- The augmented images are loaded to this notebook in the local directory and can be downloaded, and then loaded to the desired S3 bucket for training. \n",
     "\n",
